yaml/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  # nodeSelector:
  #   disktype: ssd
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
    volumeMounts:
    - name: example-volume
      mountPath: /example
  volumes:
  - name: example-volume
    emptyDir: {}

  # affinity:
  #   nodeAffinity:
  #     requiredDuringSchedulingIgnoredDuringExecution:
  #       nodeSelectorTerms:
  #       - matchExpressions:
  #         - key: kubernetes.io/e2e-az-name
  #           operator: In
  #           values:
  #           - e2e-az1
  #           - e2e-az2
  #     preferredDuringSchedulingIgnoredDuringExecution:
  #     - weight: 1
  #       preference:
  #         matchExpressions:
  #         - key: another-node-label-key
  #           operator: In
  #           values:
  #           - another-node-label-value

# https://v1-6.docs.kubernetes.io/docs/concepts/configuration/assign-pod-node/
