yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
  labels:
    app: example-service
spec:
  ports:
  - port: 80
    targetPort: 4000
    nodePort: 30050
  type: NodePort
  selector:
    app: example-pod
