yaml/basic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  namespace: default
spec:
  backend:
    serviceName: nginx
    servicePort: 80
